--- a/productos/templates/productos/index.html
+++ b/productos/templates/productos/index.html
@@ -36,6 +36,7 @@
         <a class="nav-item nav-link text-white" href="mujer_ropa.html">Ropa Mujer</a>
         <a class="nav-item nav-link text-white" href="carrito.html">Mi Carro</a>
         <a class="nav-item nav-link text-white" href="login.html">Inicia Sesion</a>
+        <a class="nav-item nav-link text-white" href="{% url 'productosList' %}">Admin</a>
 
 
       </div>
